# Simple-Ray-Tracer

./: CMakeLists.txt  Color.h  Interval.h  README.md  aabb.h  bvh.h  camera.h  common.h  hittable.h  hittable_list.h  image252.ppm  image253.ppm  image254.ppm  main.cpp  manyak.css  material.h  out2.ppm  out4.ppm  ray.h  sphere.h  vec3.h
Cuda/: Color.cu  Interval.cu  camera.cu  hittable_list.cu  main.cu  material.cu  ray.cu  vec3.cu
Output_images/: concor.ppm  fuzzy.ppm  newviewingangle.ppm  out3.ppm
